[gd_scene load_steps=7 format=3 uid="uid://clfhfh54lg1nf"]

[ext_resource type="Script" uid="uid://eeiumum23bc" path="res://scripts/workers_hut.gd" id="1_dmtaq"]
[ext_resource type="Texture2D" uid="uid://divfpcj4wyvog" path="res://art/WorkersHutSprite.png" id="2_l0p07"]
[ext_resource type="PackedScene" uid="uid://drwwji61qlf4y" path="res://scenes/Worker.tscn" id="2_o80hl"]
[ext_resource type="Texture2D" uid="uid://dts1voymurh7j" path="res://art/log.jpg" id="3_x7al1"]
[ext_resource type="Texture2D" uid="uid://cddx7e4a6orm8" path="res://art/food.jpg" id="4_ulahn"]

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_xp4s3"]
points = PackedVector2Array(43, 6, 43, 41, -5, 41, -5, 6, 16, -6, 22, -6)

[node name="WorkerHut" type="StaticBody2D"]
z_index = 1
input_pickable = true
script = ExtResource("1_dmtaq")
worker_scene = ExtResource("2_o80hl")

[node name="BuildingSprite" type="Sprite2D" parent="."]
position = Vector2(24, 24)
texture = ExtResource("2_l0p07")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(5, 6)
shape = SubResource("ConvexPolygonShape2D_xp4s3")
debug_color = Color(0.109936, 0.583178, 0.767554, 0.42)

[node name="WorkerHutStats" type="VBoxContainer" parent="."]
visible = false
offset_left = 50.0
offset_top = -1.0
offset_right = 140.0
offset_bottom = 88.0

[node name="WoodButton" type="Button" parent="WorkerHutStats"]
custom_minimum_size = Vector2(90, 25)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Wood: 0"
icon = ExtResource("3_x7al1")
expand_icon = true

[node name="FoodButton" type="Button" parent="WorkerHutStats"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Food: 0"
icon = ExtResource("4_ulahn")
expand_icon = true

[node name="CollectButton" type="Button" parent="WorkerHutStats"]
layout_mode = 2
text = "COLLECT"

[connection signal="pressed" from="WorkerHutStats/CollectButton" to="." method="_on_collect_button_pressed"]
